// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should do a snapshot test of the checked Checkbox DOM 1`] = `
<label
  className="sendbird-checkbox "
>
  <input
    checked={true}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="sendbird-checkbox--checkmark "
  />
</label>
`;

exports[`Checkbox should do a snapshot test of the default Checkbox DOM 1`] = `
<label
  className="sendbird-checkbox "
>
  <input
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="sendbird-checkbox--checkmark "
  />
</label>
`;
